3.msa-container/manifest/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-ncp
  labels:
    app: msa
    dev: ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: websvc
          servicePort: 8080
      - path: /api
        backend:
          serviceName: apisvc
          servicePort: 8080
      - path: /api/users
        backend:
          serviceName: usersvc
          servicePort: 8080
      - path: /api/threads
        backend:
          serviceName: threadsvc
          servicePort: 8080
      - path: /api/posts
        backend:
          serviceName: postsvc
          servicePort: 8080
